RESOLVED FIXED112777
ASSERTION FAILED: !m_renderingAutomaticPullNodes.size()
https://bugs.webkit.org/show_bug.cgi?id=112777
Summary ASSERTION FAILED: !m_renderingAutomaticPullNodes.size()
Xingnan Wang
Reported 2013-03-19 23:40:53 PDT
ASSERTION FAILED: !m_renderingAutomaticPullNodes.size() ../../third_party/WebKit/Source/WebCore/Modules/webaudio/AudioContext.cpp(200) : virtual WebCore::AudioContext::~AudioContext() 1 0xae20984e 2 0xae2099c3 3 0xae20d59d 4 0xae20f4b4 5 0xae20d96f 6 0xae20c048 7 0xae21be7b 8 0xaecee7e3 9 0xae2bbd88 10 0xae2bc275 11 0xb3b01bec 12 0xb3b003e1 13 0xb3b229c3 14 0xb3b21c9c 15 0xb3a81dde 16 0xb3b21966 17 0xb3b2fbac 18 0xb3d62400 19 0xb3a267db v8::V8::IdleNotification(int) 20 0xae314baf 21 0xae314cb8 22 0xadf73f1b 23 0xadf73e37 24 0xb2876712 25 0xb2877a26 26 0xb2877957 27 0xb28778bd 28 0xb21e4214 29 0xb229d1b2 base::Timer::RunScheduledTask() 30 0xb229d283
Attachments
Patch (1.35 KB, patch)
2013-03-19 23:52 PDT, Xingnan Wang
no flags
Xingnan Wang
Comment 1 2013-03-19 23:47:28 PDT
Found by the test case in https://code.google.com/p/chromium/issues/detail?id=179522 <script> var Context0= new webkitAudioContext() var Analyser0=Context0.createAnalyser(); var WaveShaper0=Context0.createWaveShaper(); var Convolver3=Context0.createConvolver(); Analyser0.connect(WaveShaper0); WaveShaper0.connect(Context0.destination); Convolver3.connect(Analyser0); setInterval(function(){ Analyser0.disconnect(); },4) setTimeout(function(){location.reload()},1000) </script>
Xingnan Wang
Comment 2 2013-03-19 23:52:24 PDT
Chris Rogers
Comment 3 2013-03-20 10:30:12 PDT
Comment on attachment 193991 [details] Patch Thanks Xingnan!
WebKit Review Bot
Comment 4 2013-03-20 10:35:34 PDT
Comment on attachment 193991 [details] Patch Clearing flags on attachment: 193991 Committed r146362: <http://trac.webkit.org/changeset/146362>
WebKit Review Bot
Comment 5 2013-03-20 10:35:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.